[#4554] add ContentAccess api definiton + generate out the api

--- a/content-access-rest/build.gradle
+++ b/content-access-rest/build.gradle
@@ -1,18 +1,21 @@
 plugins {
+	id "org.smartbit4all.platform.gradle.openapi"
 }
 
 dependencies {
-	api 'org.smartbit4all.platform:api'
-	api 'org.springframework.boot:spring-boot-starter-web:2.2.6.RELEASE'
+	api 'org.springframework:spring-context:5.2.3.RELEASE'
+	api 'org.springframework:spring-web:5.2.3.RELEASE'
 
-	testImplementation 'org.junit.jupiter:junit-jupiter'
-	
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+	api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
+	api 'org.springframework:spring-webmvc:5.3.7'
+	api 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
-test {
-	useJUnitPlatform()
+smartbit4all {
+  openApi {
+    apiDescriptorPath = "$rootDir/content-access-rest/src/main/resources/descriptors/"
+    apiPackagePrefix = "org.smartbit4all.api.contentaccess"
+    apiPackagePostfix = "rest"
+    genApiRestServer = true
+  }
 }
