[#4669] create tests for content access rest srv + fix minor issues in delegateImpl

--- a/content-access-srv-rest/build.gradle
+++ b/content-access-srv-rest/build.gradle
@@ -5,14 +5,22 @@ plugins {
 dependencies {
 	api project(':api')
 
-	api 'org.springframework:spring-context:5.2.3.RELEASE'
-	api 'org.springframework:spring-web:5.2.3.RELEASE'
-	api 'org.springframework.boot:spring-boot-starter-web:2.5.4'
-
-
-	api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
-	api 'org.springframework:spring-webmvc:5.3.7'
-	api 'javax.servlet:javax.servlet-api:4.0.1'
+	implementation 'org.springframework:spring-context:5.2.3.RELEASE'
+	implementation 'org.springframework:spring-web:5.2.3.RELEASE'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+	
+	//TODO find smaller dependency
+	implementation 'org.springframework:spring-webmvc:5.3.7'
+	
+    testImplementation('org.springframework.boot:spring-boot-starter-web:2.3.4.RELEASE') {
+		exclude group: 'ch.qos.logback', module: 'logback-classic'
+	}
+	
+	testImplementation('org.springframework.boot:spring-boot-starter-test:2.3.4.RELEASE') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		exclude group: 'ch.qos.logback', module: 'logback-classic'
+	}
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 smartbit4all {
