--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -11,7 +11,8 @@ smartbit4all {
   	modelPackagePrefix = "org.smartbit4all.api"
   	modelPackagePostfix = "bean"
   	importMappings = [
-  		"BinaryData": "org.smartbit4all.api.binarydata.BinaryData"
+  		"BinaryData": "org.smartbit4all.api.binarydata.BinaryData",
+  		"BinaryContent": "org.smartbit4all.api.binarydata.BinaryContent"
   	]
   }
 }
