--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
 	api project(':api-domain')
 	api project(':domain')
+	api 'javax.activation:activation:1.1.1'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test:2.3.8.RELEASE') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
