[#4737] Word editing ui + move DocumentViewProcessEditing to ui-api

--- a/ui-api/src/main/resources/descriptors/sb4starterui-api.yaml
+++ b/ui-api/src/main/resources/descriptors/sb4starterui-api.yaml
@@ -24,6 +24,10 @@ components:
     SB4StarterWordState:
       type: string
       enum:
-      - Download
-      - Edit
-      - Uploaded
+      - Letöltés folyamatban
+      - Szerkesztés folyamatban
+      - Szerkesztés befejezve
+      x-enum-varnames:
+      - DOWNLOADING
+      - EDITING
+      - UPLOADED
