[#4737] fix code style

--- a/ui-api/src/main/resources/descriptors/sb4starterui-api.yaml
+++ b/ui-api/src/main/resources/descriptors/sb4starterui-api.yaml
@@ -24,10 +24,6 @@ components:
     SB4StarterWordState:
       type: string
       enum:
-      - Letöltés folyamatban
-      - Szerkesztés folyamatban
-      - Szerkesztés befejezve
-      x-enum-varnames:
-      - DOWNLOADING
-      - EDITING
-      - UPLOADED
+      - Download
+      - Edit
+      - Uploaded
