[#4772] Save CompositeObjectDef with name and description

--- a/api-domain/src/main/resources/descriptors/compobject-api.yaml
+++ b/api-domain/src/main/resources/descriptors/compobject-api.yaml
@@ -19,6 +19,10 @@ components:
         uri:
           type: string
           format: uri
+        name:
+          type: string
+        description:
+          type: string
         defUri:
           type: string
           format: uri
