[#4807] vaadin-confirm-dialog to plaform ui-vaadin

--- a/ui-vaadin/build.gradle
+++ b/ui-vaadin/build.gradle
@@ -11,6 +11,7 @@ smartbit4all {
 dependencies {
 	api 'com.vaadin:flow-server'
 	api 'com.vaadin:vaadin-board-flow'
+	api 'com.vaadin:vaadin-confirm-dialog-flow'
 
 	api project(':ui-common')
 	
