--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,4 +9,14 @@ dependencies {
 	api 'org.springframework:spring-context:5.2.3.RELEASE'
     api "io.reactivex.rxjava3:rxjava:3.0.12"
     //implementation 'javax.validation:validation-api:2.0.1.Final'
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test:2.3.8.RELEASE') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+	}
+	
+    testImplementation testFixtures(project(':core'))
+	testFixturesImplementation project(':core')
+    testFixturesImplementation testFixtures(project(':core'))
 }
