--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ subprojects {
     apply plugin: 'maven-publish'
 
     group "org.smartbit4all.platform"
-    version "1.0.2-SNAPSHOT"
+    version "1.0.2"
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
