--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 	
 	api 'org.springframework:spring-context:5.2.3.RELEASE'
     api "io.reactivex.rxjava3:rxjava:3.0.12"
+    api 'org.openapitools:jackson-databind-nullable:0.2.1'
     //implementation 'javax.validation:validation-api:2.0.1.Final'
 
 }
