[#4846] DocGen based on navigation resolve - first try fixes

--- a/api-domain/src/main/resources/descriptors/compobject-api.yaml
+++ b/api-domain/src/main/resources/descriptors/compobject-api.yaml
@@ -52,6 +52,9 @@ components:
     CompositeObjectAssociation:
       type: object
       properties:
+        name:
+          type: string
+          description: Symbolic name of the association. Should be unique in the CompositeObjectDef.
         assocDefUri:
           type: string
           format: uri
