[#4635]make CompositeObject.objects NotNull

--- a/api-domain/src/main/resources/descriptors/compobject-api.yaml
+++ b/api-domain/src/main/resources/descriptors/compobject-api.yaml
@@ -35,6 +35,7 @@ components:
       type: object
       required:
       - uri
+      - objects
       properties:
         uri:
           type: string
