[#4635] new TreeView inspired by Vaadin TreeGrid
Some severe changes:
- TreeView / TreeNodeView for generic tree data representation
  - TreeNode will change to more general signature
- UIViewShowCommand --> NavigationTarget (may change to UI~ later)
- Navigation now uses api.navigate with nodeChangedListener
- first use of VaadinWidgetCollectionBinder as VaadinTreeNodeBinder

--- a/ui-api/src/main/resources/descriptors/tree-api.yaml
+++ b/ui-api/src/main/resources/descriptors/tree-api.yaml
@@ -55,6 +55,9 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TreeNode'
+        hasChildren:
+          type: boolean
+          default: false
         expanded:
           type: boolean
           default: false
@@ -64,6 +67,11 @@ components:
         childrenNodesLoaded:
           type: boolean
           default: false
+        navigationTarget:
+          type: 'NavigationTarget'
+        level:
+          type: integer
+          format: int32
     TreeNodeKind:
       type: string
       enum: [entry, association, reference]
