--- a/ui-api/build.gradle
+++ b/ui-api/build.gradle
@@ -19,7 +19,8 @@ smartbit4all {
         "FilterOperation" : "org.smartbit4all.api.filter.bean.FilterOperation",
         "BinaryData": "org.smartbit4all.api.binarydata.BinaryData",
         "BinaryContent": "org.smartbit4all.api.binarydata.BinaryContent",
-        "Double": "java.lang.Double"
+        "Double": "java.lang.Double",
+        "NavigationTarget": "org.smartbit4all.ui.api.navigation.model.NavigationTarget"
       ]
   }
 }
