--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,5 +10,7 @@ dependencies {
     api "io.reactivex.rxjava3:rxjava:3.0.12"
     api 'org.openapitools:jackson-databind-nullable:0.2.1'
     //implementation 'javax.validation:validation-api:2.0.1.Final'
+    
+    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
 
 }
