--- a/storage-fs/build.gradle
+++ b/storage-fs/build.gradle
@@ -6,7 +6,13 @@ dependencies {
 	api project(':domain')
 
 	testImplementation project(':gson')
-	
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test:2.3.8.RELEASE') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+	}
+
     testImplementation testFixtures(project(':core'))
 	testFixturesApi project(':core')
     testFixturesApi testFixtures(project(':core'))
