--- a/ui-api/src/main/resources/descriptors/tree-api.yaml
+++ b/ui-api/src/main/resources/descriptors/tree-api.yaml
@@ -68,7 +68,7 @@ components:
           type: boolean
           default: false
         navigationTarget:
-          type: 'NavigationTarget'
+          type: 'NavigationTargetRef'
         level:
           type: integer
           format: int32
