[#5030] handle closeAfterNavigation + close now calls beforeLeave()

--- a/ui-api/src/main/resources/descriptors/navigation-api.yaml
+++ b/ui-api/src/main/resources/descriptors/navigation-api.yaml
@@ -46,6 +46,8 @@ components:
           $ref: '#/components/schemas/NavigationTargetState'
         type:
           $ref: '#/components/schemas/NavigationTargetType'
+        closeAfterNavigation:
+          type: boolean
     NavigationTargetState:
       type: string
       enum:
