[#5204] Word szerkesztés bekötése

--- a/ui-api/src/main/resources/descriptors/sb4starterui-api.yaml
+++ b/ui-api/src/main/resources/descriptors/sb4starterui-api.yaml
@@ -20,6 +20,8 @@ components:
           type: BinaryContent
         resultContent:
           type: BinaryContent
+        SB4StarterUrl:
+          type: string
     
     SB4StarterWordState:
       type: string
