[#5030] Navigation dialog fullscreen + use vaadin UI thread

--- a/ui-api/src/main/resources/descriptors/navigation-api.yaml
+++ b/ui-api/src/main/resources/descriptors/navigation-api.yaml
@@ -51,6 +51,9 @@ components:
           $ref: '#/components/schemas/NavigationTargetType'
         closeAfterNavigation:
           type: boolean
+        fullSize:
+          type: boolean
+          default: false
     NavigationTargetState:
       type: string
       enum:
