[#5010] modified bean and VM

--- a/api-domain/src/main/resources/descriptors/storage-api.yaml
+++ b/api-domain/src/main/resources/descriptors/storage-api.yaml
@@ -75,12 +75,13 @@ components:
     ObjectHistory:
       type: object
       properties:
-        title:
-          type: string
         objectHistoryEntries:
           type: array
           items:
             $ref: '#/components/schemas/ObjectHistoryEntry'
+        selectedVersionUri:
+          type: string
+          format: uri
     ObjectHistoryEntry:
       type: object
       description: |
