[#5283] added inactive attribute to User

--- a/api-domain/src/main/resources/descriptors/org-api.yaml
+++ b/api-domain/src/main/resources/descriptors/org-api.yaml
@@ -162,6 +162,9 @@ components:
           type: string
           format: password
           description: 'The encripted password of the user'
+        inactive:
+          type: boolean
+          default: false 
         attributes:
           type: object
           additionalProperties:
