[#5312] add setTitle() to UINavigationApi, works in dialog and tabs only

--- a/ui-api/src/main/resources/descriptors/navigation-api.yaml
+++ b/ui-api/src/main/resources/descriptors/navigation-api.yaml
@@ -52,6 +52,10 @@ components:
         fullSize:
           type: boolean
           default: false
+        title:
+          type: string
+        icon:
+          type: string
     NavigationTargetState:
       type: string
       enum:
