[#5403] upgrade to Vaadin 14.7.5

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
+pluginManagement {
+  plugins {
+        id 'com.vaadin' version "${vaadinPluginVersion}" apply false
+    }
+}
+
 rootProject.name = 'platform'
 
 include 'core'
