--- a/api-domain/src/main/resources/descriptors/org-api.yaml
+++ b/api-domain/src/main/resources/descriptors/org-api.yaml
@@ -177,6 +177,9 @@ components:
           type: string
           format: uri
           description: 'The uri of the group'
+        title:
+          type: string
+          description: 'The title of the group, can be used as display name'
         name:
           type: string
           description: 'The name of the group'
