[#5654] add ExpandSystemVariable to SB4Starter CommandKind

--- a/api-domain/src/main/resources/descriptors/sb4starter-api.yaml
+++ b/api-domain/src/main/resources/descriptors/sb4starter-api.yaml
@@ -54,6 +54,7 @@ components:
         - WordEdit
         - ExecuteCommand
         - ContentAccessUpload
+        - ExpandSystemVariable
         
     SB4File:
       type: object
