[#5647] StorageFS - transaction mgmt - Spring transaction manager

--- a/storage-fs/build.gradle
+++ b/storage-fs/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
 	api project(':domain')
+	implementation 'org.springframework:spring-tx:5.3.13'
 
 	testImplementation project(':gson')
 
